<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.dialogs.ConfirmConsultationDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/consultation"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <org.mmtextview.components.MMTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ဆွေးနွေးမှုအတည်ပြုချက်"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <org.mmtextview.components.MMTextView
            android:id="@+id/tvConfirmConsultation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/confirm_consultation"
            android:textColor="@color/green"
            android:lineSpacingExtra="5dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp">

            <org.mmtextview.components.MMTextView
                android:id="@+id/tvNotConsult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_not_consult"
                android:textColor="@color/blue"
                android:textStyle="bold"/>

            <org.mmtextview.components.MMTextView
                android:id="@+id/tvConfirmConsult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_confirm_consult"
                android:textColor="@color/white"
                android:background="@drawable/rounded_component"
                android:paddingTop="6dp"
                android:paddingBottom="8dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>