<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_white"
    tools:context=".activities.CaseSummaryFormActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Toolbar"
        android:background="@color/white"
        android:elevation="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnCaseSummaryBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_fill_case_summary"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/btnCaseSummaryBack"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="0dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivCaseGeneral"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_baseline_done_24"
                        android:background="@color/blue"
                        android:padding="3dp"/>

                </androidx.cardview.widget.CardView>

                <View
                    android:id="@+id/vCaseGeneral"
                    android:layout_width="100dp"
                    android:layout_height="3dp"
                    android:background="@color/blue"
                    android:layout_gravity="center_vertical" />

                <View
                    android:id="@+id/vCaseSpeciality"
                    android:layout_width="100dp"
                    android:layout_height="3dp"
                    android:background="@color/grey"
                    android:layout_gravity="center_vertical" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="0dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivCaseSpeciality"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_baseline_done_24"
                        android:background="@color/grey"
                        android:padding="3dp"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_general_questions"
                android:textColor="@color/green"
                android:layout_below="@id/linearLayout"
                android:layout_marginTop="5dp"
                android:layout_marginStart="26dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_speciality_questions"
                android:textColor="@color/green"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/linearLayout"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="5dp"/>

            <FrameLayout
                android:id="@+id/fragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/title"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>