<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Toolbar"
        android:background="@color/white"
        android:elevation="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivProfileBack"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_baseline_arrow_back_24"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivProfileBack"
            android:layout_centerVertical="true"
            android:text="ပရိုဖိုင်ဖြည့်သွင်းမည်"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivEditProfile"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_baseline_wysiwyg_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"/>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/doctor_profile" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ivProfile"
        android:text="09970190239"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:inputType="phone"
        android:layout_alignBottom="@id/ivProfile"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ivProfile"
        android:layout_above="@id/tvPhoneNumber"
        android:text="Naing Htet Zaw"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/layoutBd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:layout_below="@id/ivProfile"
        android:layout_marginTop="30dp">

        <org.mmtextview.components.MMTextView
            android:id="@+id/tvProfileBdQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="မွေးနေ့"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            android:layout_marginTop="5dp"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvProfileBd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tv_case_answer"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textAlignment="viewEnd"/>

    </LinearLayout>

    <org.mmtextview.components.MMTextView
        android:id="@+id/tvLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvLogOut"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="20dp"/>

    <org.mmtextview.components.MMTextView
        android:id="@+id/tvChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvChangePassworf"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="20dp"/>

</RelativeLayout>